# ai-caddie-app

client/: app.config.js  app.json  package-lock.json  package.json  pnpm-lock.yaml
client/app/: index.tsx
client/app/(tabs)/: _layout.tsx  account.tsx  play.tsx  playstyle.tsx
client/app/screens/: golf-bag.tsx  notifications.tsx  profile.tsx  settings.tsx
client/assets/svg-componnets/: example-golf-course.tsx
client/components/: 3d-hole.tsx  ai-caddie-chat.tsx  club-selector.tsx  golf-hole-map.tsx  golf-hole-svg-map.tsx  golf-viewer.tsx  mock.ts  utils.ts  windCompass.tsx
client/constants/: interfaces.ts
client/extra/: auth.tsx  homescreen.tsx  new-round.tsx  previous-rounds.tsx  settings.tsx
client/services/: api.ts  courseApi.ts  holeApi.ts
server/: Cargo.toml  diesel.toml
server/migrations/2024-09-03-010344_add_courses_and_update_holes/: down.sql  up.sql
server/migrations/2024-09-03-045844_add_course_name_to_courses/: down.sql  up.sql
server/src/: aws_operations.rs  db_operations.rs  main.rs  models.rs  schema.rs
